# pip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-push-action.yml
src/desota/: detools.py
